# azure-mcp

./: README.md  azurevmmcp.py  main.py  pyproject.toml  test.py
src/: .env  .env.example  azure_clients.py  main.py  networking.py  requirements.txt  vm_operations.py
